k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers:
        - name: linkding
          image: cemrea/linkding:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
